--- a/paginas/goias.html
+++ b/paginas/goias.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Avaí</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Avaí Futebol Clube</h1>
+    <h1>Goiás Esportes Clube</h1>
     <nav>
       <ul>
                 <li><a href="index.html">Início</a></li>
