--- a/paginas/goias.html
+++ b/paginas/goias.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Avaí</title>
+  <title>Goiás Esportes Clube</title>
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/goias.png" alt="Escudo do Goiás Esporter Clube" class="brasao" />
+    <img src="imagens/goias.png" alt="Escudo do Goiás Esporter Clube" class="brasao" />
     <h2>História do Goiás Esportes Clube</h2>
     <p>O Goiás Esporte Clube foi fundado em 6 de abril de 1943, por um grupo de amigos que se reuniram na casa de Lino Barsi para criar um time de futebol. O clube rapidamente se estabeleceu como uma força importante no futebol goiano e brasileiro, com diversas conquistas estaduais e participações em competições nacionais e internacionais</p>
 
