--- a/paginas/index.html
+++ b/paginas/index.html
@@ -36,6 +36,7 @@
             </ul>
         </nav>
     </header>
+    <img src="imagens/goias.png" alt="Escudo do Goiás Esporter Clube" class="brasao">
     <main>
         <h2>Bem-vindo ao site oficial da Série B!</h2>
         <p>Explore as páginas dos times participantes do campeonato.</p>
