--- a/paginas/index.html
+++ b/paginas/index.html
@@ -41,7 +41,7 @@
         <p>Explore as páginas dos times participantes do campeonato.</p>
     </main>
     <footer>
-        <p>© Pérola Fontana Corchog - 2025</p>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
     </footer>
 </body>
 
