--- a/paginas/goias.html
+++ b/paginas/goias.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/goias.png" alt="Escudo do Goiás Esportes Clube" class="brasao" />
+    <img src="../imagens/goias" alt="Escudo do Goiás Esportes Clube" class="brasao" />
     <h2>História do Goiás Esportes Clube</h2>
     <p>O Goiás Esporte Clube foi fundado em 6 de abril de 1943, por um grupo de amigos que se reuniram na casa de Lino Barsi para criar um time de futebol. O clube rapidamente se estabeleceu como uma força importante no futebol goiano e brasileiro, com diversas conquistas estaduais e participações em competições nacionais e internacionais</p>
 
