--- a/paginas/coritiba.html
+++ b/paginas/coritiba.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Coritiba Foot Ball Club</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Coritiba Foot Ball Club</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="ateletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/goias.png" alt="Escudo do Goiás Esportes Clube" class="brasao" />
+    <h2>História do Coritiba Foot Ball Club</h2>
+    <p>O Coritiba Foot Ball Club, conhecido como Coxa, é um clube de futebol brasileiro fundado em 1909 na cidade de Curitiba, Paraná. É o clube mais antigo do estado e um dos mais tradicionais, com uma história rica em conquistas e momentos marcantes.</p>
 
+    <h3>Estádio</h3>
+    <p>O Coritiba Foot Ball Clube joga no Estádio Major Antônio Couto Pereira, com capacidade para 40.502 torcedores</p>
+
+    <h3>Cores</h3>
+    <p>As cores do brasão do Coritiba Foot Ball Club são verde e branco. Estas cores são uma referência direta à bandeira do estado do Paraná, onde o clube foi fundado.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
