--- a/paginas/coritiba.html
+++ b/paginas/coritiba.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/goias.png" alt="Escudo do Goiás Esportes Clube" class="brasao" />
+    <img src="../imagens/coritiba.png" alt="Escudo do Coritiba Foot Ball Club" class="brasao" />
     <h2>História do Coritiba Foot Ball Club</h2>
     <p>O Coritiba Foot Ball Club, conhecido como Coxa, é um clube de futebol brasileiro fundado em 1909 na cidade de Curitiba, Paraná. É o clube mais antigo do estado e um dos mais tradicionais, com uma história rica em conquistas e momentos marcantes.</p>
 
