--- a/paginas/goias.html
+++ b/paginas/goias.html
@@ -36,7 +36,7 @@
   <main>
     <img src="../imagens/goias.png" alt="Escudo do Goiás Esportes Clube" class="brasao" />
     <h2>História do Goiás Esportes Clube</h2>
-    <p>O Goiás Esporte Clube foi fundado em 6 de abril de 1943, por um grupo de amigos que se reuniram na casa de Lino Barsi para criar um time de futebol. O clube rapidamente se estabeleceu como uma força importante no futebol goiano e brasileiro, com diversas conquistas estaduais e participações em competições nacionais e internacionais</p>
+    <p>O Goiás Esporte Clube foi fundado em 6 de abril de 1943, por um grupo de amigos que se reuniram na casa de Lino Barsi para criar um time de futebol. O clube rapidamente se estabeleceu como uma força importante no futebol goiano e brasileiro, com diversas conquistas estaduais e participações em competições nacionais e internacionais.</p>
 
     <h3>Estádio</h3>
     <p>O Goiás Esporte Clube joga no estado de Goiás, no Brasil. O clube é sediado em Goiânia, a capital do estado. O estádio do clube, Estádio Hailé Pinheiro, também conhecido como Serrinha, está localizado em Goiânia. O estádio tem atualmente capacidade máxima para 14.450 torcedores. 
