--- a/paginas/novorizontino.html
+++ b/paginas/novorizontino.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Grêmio Novorizontino</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Grêmio Novorizontino</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="ateletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/goias.png" alt="Escudo do Grêmio Novorizontino" class="brasao" />
+    <h2>História do Grêmio Novorizontino</h2>
+    <p>O Grêmio Novorizontino, conhecido como Tigre do Vale, foi fundado em 2010 e tem uma história de ascensão meteórica no futebol paulista e nacional. O clube substituiu o antigo Grêmio Esportivo Novorizontino, que encerrou suas atividades em 1998, e adotou as cores e o mascote do clube original. O Novorizontino rapidamente subiu de divisão no Campeonato Paulista, conquistando o título da Série A3 em 2014 e a promoção para a Série A2. Em 2016, o clube começou a disputar a elite do futebol paulista e, em 2021, conquistou o Troféu do Interior. Em 2023, o Novorizontino retornou à elite do Campeonato Paulista e quase alcançou o acesso para a Série A do Campeonato Brasileiro. </p>
 
+    <h3>Estádio</h3>
+    <p> Grêmio Novorizontino joga no estádio Jorge Ismael de Biasi, localizado em Novo Horizonte, São Paulo, Brasil. Com capacidade para 12.398 pessoas.</p>
+
+    <h3>Cores</h3>
+    <p>As cores do brasão do Novorizontino são amarelo e preto. Essas cores também são as cores oficiais do clube e foram inspiradas nas cores da fábrica onde o time foi originalmente criado, segundo o Grêmio Novorizontino. </p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
