--- a/paginas/remo.html
+++ b/paginas/remo.html
@@ -36,8 +36,8 @@
   <main>
     <img src="../imagens/coritiba.png" alt="Escudo do Clube do Remo" class="brasao" />
     <h2>História do Clube do Remo</h2>
-    <p>O Clube do Remo, também conhecido como "Leão Azul", é um clube poliesportivo brasileiro com sede em Belém, Pará, conhecido principalmente por sua história no futebol. Fundado em 1905 como um clube de remo, o futebol foi adotado posteriormente, tornando-se a modalidade mais popular e vitoriosa do clube. </p>
-
+    <p>O Clube do Remo, também conhecido simplesmente como Remo, é um clube esportivo brasileiro fundado em 5 de fevereiro de 1905, em Belém do Pará. Inicialmente chamado Grupo do Remo, foi formado por dissidentes do Sport Club do Pará e, após um período de interrupção, foi reorganizado em 1911, adotando seu nome atual em 1914. O clube tem suas raízes na paixão pelo remo, esporte que era muito popular na época, e sua sede náutica na Baía do Guajará é um local histórico para o clube.</p>
+      
     <h3>Estádio</h3>
     <p>O Clube do Remo joga no estádio Banpará Baenão, localizado em Belém, Pará, Brasil. Com capacidade de 13.792 torcedores.</p>
 
