--- a/paginas/coritiba.html
+++ b/paginas/coritiba.html
@@ -39,7 +39,7 @@
     <p>O Coritiba Foot Ball Club, conhecido como Coxa, é um clube de futebol brasileiro fundado em 1909 na cidade de Curitiba, Paraná. É o clube mais antigo do estado e um dos mais tradicionais, com uma história rica em conquistas e momentos marcantes.</p>
 
     <h3>Estádio</h3>
-    <p>O Coritiba Foot Ball Clube joga no Estádio Major Antônio Couto Pereira, com capacidade para 40.502 torcedores.</p>
+    <p>O Coritiba Foot Ball Clube joga no Estádio Major Antônio Couto Pereira, com capacidade de 40.502 torcedores.</p>
 
     <h3>Cores</h3>
     <p>As cores do brasão do Coritiba Foot Ball Club são verde e branco. Estas cores são uma referência direta à bandeira do estado do Paraná, onde o clube foi fundado.</p>
