--- a/paginas/remo.html
+++ b/paginas/remo.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/coritiba.png" alt="Escudo do Clube do Remo" class="brasao" />
+    <img src="../imagens/remo.png" alt="Escudo do Clube do Remo" class="brasao" />
     <h2>História do Clube do Remo</h2>
     <p>O Clube do Remo, também conhecido simplesmente como Remo, é um clube esportivo brasileiro fundado em 5 de fevereiro de 1905, em Belém do Pará. Inicialmente chamado Grupo do Remo, foi formado por dissidentes do Sport Club do Pará e, após um período de interrupção, foi reorganizado em 1911, adotando seu nome atual em 1914. O clube tem suas raízes na paixão pelo remo, esporte que era muito popular na época, e sua sede náutica na Baía do Guajará é um local histórico para o clube.</p>
       
