--- a/paginas/criciuma.html
+++ b/paginas/criciuma.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Criciúma Esporte Clube</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Criciúma Esporte Clube</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="ateletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/goias.png" alt="Escudo do Criciúma Esporte Clube" class="brasao" />
+    <h2>História do Criciúma Esporte Clube</h2>
+    <p>O Criciúma Esporte Clube, conhecido como Tigre, foi fundado em 13 de maio de 1947, com o nome de Comerciário Esporte Clube. O clube é o único de Santa Catarina a conquistar a Copa do Brasil, feito alcançado em 1991. O Criciúma também foi campeão da Série B do Campeonato Brasileiro em 2002 e da Série C em 2006.</p>
 
+    <h3>Estádio</h3>
+    <p>Jogam no Estádio Heriberto Hülse, apelidado de "Majestoso", é um estádio de futebol localizado na cidade de Criciúma, estado de Santa Catarina, Brasil, de propriedade do Criciúma Esporte Clube.</p>
+
+    <h3>Cores</h3>
+    <p>As cores do escudo do Criciúma Esporte Clube são preto e amarelo.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
