--- a/paginas/criciuma.html
+++ b/paginas/criciuma.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/goias.png" alt="Escudo do Criciúma Esporte Clube" class="brasao" />
+    <img src="../imagens/criciuma.png" alt="Escudo do Criciúma Esporte Clube" class="brasao" />
     <h2>História do Criciúma Esporte Clube</h2>
     <p>O Criciúma Esporte Clube, conhecido como Tigre, foi fundado em 13 de maio de 1947, com o nome de Comerciário Esporte Clube. O clube é o único de Santa Catarina a conquistar a Copa do Brasil, feito alcançado em 1991. O Criciúma também foi campeão da Série B do Campeonato Brasileiro em 2002 e da Série C em 2006.</p>
 
