--- a/paginas/cuiaba.html
+++ b/paginas/cuiaba.html
@@ -35,7 +35,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/goias.png" alt="Escudo do Cuiabá Esporte Clube" class="brasao" />
+    <img src="../imagens/cuiaba.png" alt="Escudo do Cuiabá Esporte Clube" class="brasao" />
     <h2>História do Cuiabá Esporte Clube</h2>
     <p>O Cuiabá Esporte Clube, também conhecido como Cuiabá, é um clube de futebol brasileiro sediado em Cuiabá, Mato Grosso. Foi fundado em 12 de dezembro de 2001 pelo ex-jogador Luís Carlos Tóffoli, conhecido como Gaúcho. O clube é conhecido como o "Dourado" e suas cores tradicionais são o amarelo e o verde. O Cuiabá é o maior campeão do Campeonato Mato-Grossense, com 24 títulos.</p>
 
