--- a/paginas/index.html
+++ b/paginas/index.html
@@ -39,6 +39,17 @@
     <main>
         <h2>Bem-vindo ao site oficial da Série B!</h2>
         <p>Explore as páginas dos times participantes do campeonato.</p>
+
+        <h3>Como funciona?</h3>
+        <p>A Série B é a segunda divisão do Campeonato Brasileiro de Futebol, organizada pela Confederação Brasileira de Futebol (CBF). Ela é uma das principais competições nacionais e serve como um acesso para a elite do futebol brasileiro, a Série A.</p>
+
+        <h3> Formato da Competição (atualmente)</h3>
+        <p>Participam 20 clubes.</p>
+        <br>
+        <p>Os times jogam entre si em turno e returno (ou seja, todos jogam contra todos duas vezes — uma em casa, outra fora).</p>
+        <br>
+        <p>São, ao todo, 38 rodadas.</p>
+        <br>
     </main>
     <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
