--- a/paginas/index.html
+++ b/paginas/index.html
@@ -45,11 +45,13 @@
 
         <h3> Formato da Competição (atualmente)</h3>
         <p>Participam 20 clubes.</p>
-        <br>
         <p>Os times jogam entre si em turno e returno (ou seja, todos jogam contra todos duas vezes — uma em casa, outra fora).</p>
-        <br>
         <p>São, ao todo, 38 rodadas.</p>
-        <br>
+        <p>Ao final da temporada:</p>
+        <ul>
+            <p>Os 4 primeiros colocados sobem para a Série A do ano seguinte.</p>
+            <p>Os 4 últimos são rebaixados para a Série C.</p>
+        </ul>
     </main>
     <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
