--- a/paginas/index.html
+++ b/paginas/index.html
@@ -39,8 +39,8 @@
     <main>
         <h2>Bem-vindo ao site oficial da Série B!</h2>
         <p>Explore as páginas dos times participantes do campeonato.</p>
-
-        <h3>Como funciona?</h3>
+        <br>
+        <h3>Introdução</h3>
         <p>A Série B é a segunda divisão do Campeonato Brasileiro de Futebol, organizada pela Confederação Brasileira de Futebol (CBF). Ela é uma das principais competições nacionais e serve como um acesso para a elite do futebol brasileiro, a Série A.</p>
 
         <h3> Formato da Competição (atualmente)</h3>
@@ -52,6 +52,8 @@
             <p>Os 4 primeiros colocados sobem para a Série A do ano seguinte.</p>
             <p>Os 4 últimos são rebaixados para a Série C.</p>
         </ul>
+
+        <h3> Importância da Série B</h3>
     </main>
     <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
