--- a/paginas/index.html
+++ b/paginas/index.html
@@ -54,6 +54,11 @@
         </ul>
 
         <h3> Importância da Série B</h3>
+        <p>É uma competição muito disputada e equilibrada, com muitos clubes tradicionais que já foram campeões da Série A ou da Copa do Brasil.</p>
+        <p>A Série B é vista como um recomeço para muitos clubes que enfrentaram crises financeiras ou má gestão.</p>
+
+        <h3> Clubes tradicionais que já passaram pela Série B</h3>
+        <p><strong>Corinthians, Palmeiras, Vasco, Cruzeiro, Botafogo, Grêmio,</strong> entre outros já jogaram a Série B.</p>
     </main>
     <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
