--- a/paginas/index.html
+++ b/paginas/index.html
@@ -59,6 +59,9 @@
 
         <h3> Clubes tradicionais que já passaram pela Série B</h3>
         <p><strong>Corinthians, Palmeiras, Vasco, Cruzeiro, Botafogo, Grêmio,</strong> entre outros já jogaram a Série B.</p>
+
+        <h3>Temporada</h3>
+        <p>Geralmente acontece entre abril e novembro, com datas ajustadas conforme o calendário do futebol nacional e internacional.</p>
     </main>
     <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
