--- a/paginas/avai.html
+++ b/paginas/avai.html
@@ -41,10 +41,10 @@
     <p>O Avaí Futebol Clube, conhecido como Leão da Ilha, é um clube esportivo brasileiro com sede em Florianópolis, Santa Catarina. Fundado em 1923, o Avaí tem uma história rica no futebol catarinense e nacional. O nome "Avaí" tem origem na Batalha de Avahy, um episódio da Guerra do Paraguai.</p>
 
     <h3>Estádio</h3>
-    <p>O Cuiabá Esporte Clube joga no Arena Pantanal, lacalizado em Cuiabá, Mato Grosso, Brasil. Com capacidade de 44.097 torcedores.</p>
+    <p>O Avaí Futebol Clube joga no Estádio Aderbal Ramos da Silva, localizado em Florianópolis, Santa Catarina, Brasil. Com capacidade de 17.800 torcedores.</p>
 
     <h3>Cores</h3>
-    <p>As cores do escudo do Cuiabá Esporte Clube são verde e amarelo.</p>
+    <p>O Avaí tem como cores o azul e o branco.</p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
