--- a/paginas/vilanova.html
+++ b/paginas/vilanova.html
@@ -1,1 +1,54 @@
 
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Cuiabá Esporte Clube</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Cuiabá Esporte Clube</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="ateletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/vilanova.png" alt="Escudo do Cuiabá Esporte Clube" class="brasao" />
+    <h2>História do Cuiabá Esporte Clube</h2>
+    <p>O Cuiabá Esporte Clube, também conhecido como Cuiabá, é um clube de futebol brasileiro sediado em Cuiabá, Mato Grosso. Foi fundado em 12 de dezembro de 2001 pelo ex-jogador Luís Carlos Tóffoli, conhecido como Gaúcho. O clube é conhecido como o "Dourado" e suas cores tradicionais são o amarelo e o verde. O Cuiabá é o maior campeão do Campeonato Mato-Grossense, com 24 títulos.</p>
+
+    <h3>Estádio</h3>
+    <p>O Cuiabá Esporte Clube joga no Arena Pantanal, lacalizado em Cuiabá, Mato Grosso, Brasil. Com capacidade de 44.097 torcedores.</p>
+
+    <h3>Cores</h3>
+    <p>As cores do escudo do Cuiabá Esporte Clube são verde e amarelo.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
+
