--- a/paginas/vilanova.html
+++ b/paginas/vilanova.html
@@ -1,15 +1,13 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Cuiabá Esporte Clube</title>
+  <title>Vila Nova Futebol Clube</title>
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Cuiabá Esporte Clube</h1>
+    <h1>Vila Nova Futebol Clube</h1>
     <nav>
       <ul>
            <li><a href="index.html">Início</a></li>
@@ -36,15 +34,15 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/vilanova.png" alt="Escudo do Cuiabá Esporte Clube" class="brasao" />
-    <h2>História do Cuiabá Esporte Clube</h2>
-    <p>O Cuiabá Esporte Clube, também conhecido como Cuiabá, é um clube de futebol brasileiro sediado em Cuiabá, Mato Grosso. Foi fundado em 12 de dezembro de 2001 pelo ex-jogador Luís Carlos Tóffoli, conhecido como Gaúcho. O clube é conhecido como o "Dourado" e suas cores tradicionais são o amarelo e o verde. O Cuiabá é o maior campeão do Campeonato Mato-Grossense, com 24 títulos.</p>
+    <img src="../imagens/vilanova.png" alt="Escudo do Vila Nova Futebol Clube" class="brasao" />
+    <h2>História do Vila Nova Futebol Clube</h2>
+    <p>“A fundação oficial do clube veio no ano de 1943, quando pelas mãos do coronel Francisco Ferraz Lima, com a água benta do Pe. Giuseppe Balestiere e a benção de Gercina Borges, mulher de Pedro Ludovico Teixeira, conhecida como a "mãe dos pobres", nasce o clube que, em breve, seria o mais popular do Centro-Oeste.</p>
 
     <h3>Estádio</h3>
-    <p>O Cuiabá Esporte Clube joga no Arena Pantanal, lacalizado em Cuiabá, Mato Grosso, Brasil. Com capacidade de 44.097 torcedores.</p>
+    <p></p>
 
     <h3>Cores</h3>
-    <p>As cores do escudo do Cuiabá Esporte Clube são verde e amarelo.</p>
+    <p></p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
