--- a/paginas/vilanova.html
+++ b/paginas/vilanova.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/vilanova.png" alt="Escudo do Vila Nova Futebol Clube" class="brasao" />
+    <img src="../imagens/vilanova.png.png" alt="Escudo do Vila Nova Futebol Clube" class="brasao" />
     <h2>História do Vila Nova Futebol Clube</h2>
     <p>“A fundação oficial do clube veio no ano de 1943, quando pelas mãos do coronel Francisco Ferraz Lima, com a água benta do Pe. Giuseppe Balestiere e a benção de Gercina Borges, mulher de Pedro Ludovico Teixeira, conhecida como a "mãe dos pobres", nasce o clube que, em breve, seria o mais popular do Centro-Oeste.</p>
 
