--- a/paginas/avai.html
+++ b/paginas/avai.html
@@ -41,7 +41,7 @@
     <p>O Avaí Futebol Clube, conhecido como Leão da Ilha, é um clube esportivo brasileiro com sede em Florianópolis, Santa Catarina. Fundado em 1923, o Avaí tem uma história rica no futebol catarinense e nacional. O nome "Avaí" tem origem na Batalha de Avahy, um episódio da Guerra do Paraguai.</p>
 
     <h3>Estádio</h3>
-    <p>O Avaí Futebol Clube joga no Estádio Aderbal Ramos da Silva, localizado em Florianópolis, Santa Catarina, Brasil. Com capacidade de 17.800 torcedores.</p>
+    <p>O Avaí Futebol Clube joga no Estádio Aderbal Ramos da Silva, localizado em Florianópolis, Santa Catarina, Brasil. Com capacidade para 17.800 torcedores.</p>
 
     <h3>Cores</h3>
     <p>O Avaí tem como cores o azul e o branco.</p>
