--- a/paginas/criciuma.html
+++ b/paginas/criciuma.html
@@ -39,7 +39,7 @@
     <p>O Criciúma Esporte Clube, conhecido como Tigre, foi fundado em 13 de maio de 1947, com o nome de Comerciário Esporte Clube. O clube é o único de Santa Catarina a conquistar a Copa do Brasil, feito alcançado em 1991. O Criciúma também foi campeão da Série B do Campeonato Brasileiro em 2002 e da Série C em 2006.</p>
 
     <h3>Estádio</h3>
-    <p>Jogam no Estádio Heriberto Hülse, apelidado de "Majestoso", é um estádio de futebol localizado na cidade de Criciúma, estado de Santa Catarina, Brasil, de propriedade do Criciúma Esporte Clube.</p>
+    <p>Jogam no Estádio Heriberto Hülse, apelidado de "Majestoso", é um estádio de futebol localizado na cidade de Criciúma, estado de Santa Catarina, Brasil, de propriedade do Criciúma Esporte Clube. O estádio tem capacidade para 19.225 torcedores.</p>
 
     <h3>Cores</h3>
     <p>As cores do escudo do Criciúma Esporte Clube são preto e amarelo.</p>
