--- a/paginas/cuiaba.html
+++ b/paginas/cuiaba.html
@@ -40,7 +40,7 @@
     <p>O Cuiabá Esporte Clube, também conhecido como Cuiabá, é um clube de futebol brasileiro sediado em Cuiabá, Mato Grosso. Foi fundado em 12 de dezembro de 2001 pelo ex-jogador Luís Carlos Tóffoli, conhecido como Gaúcho. O clube é conhecido como o "Dourado" e suas cores tradicionais são o amarelo e o verde. O Cuiabá é o maior campeão do Campeonato Mato-Grossense, com 24 títulos.</p>
 
     <h3>Estádio</h3>
-    <p>O Cuiabá Esporte Clube joga no Arena Pantanal, lacalizado em Cuiabá, Mato Grosso, Brasil. Com capacidade de 44.097 torcedores.</p>
+    <p>O Cuiabá Esporte Clube joga no Arena Pantanal, lacalizado em Cuiabá, Mato Grosso, Brasil. Com capacidade para 44.097 torcedores.</p>
 
     <h3>Cores</h3>
     <p>As cores do escudo do Cuiabá Esporte Clube são verde e amarelo.</p>
