--- a/paginas/novorizontino.html
+++ b/paginas/novorizontino.html
@@ -39,7 +39,7 @@
     <p>O Grêmio Novorizontino, conhecido como Tigre do Vale, foi fundado em 2010 e tem uma história de ascensão meteórica no futebol paulista e nacional. O clube substituiu o antigo Grêmio Esportivo Novorizontino, que encerrou suas atividades em 1998, e adotou as cores e o mascote do clube original. O Novorizontino rapidamente subiu de divisão no Campeonato Paulista, conquistando o título da Série A3 em 2014 e a promoção para a Série A2. Em 2016, o clube começou a disputar a elite do futebol paulista e, em 2021, conquistou o Troféu do Interior. Em 2023, o Novorizontino retornou à elite do Campeonato Paulista e quase alcançou o acesso para a Série A do Campeonato Brasileiro. </p>
 
     <h3>Estádio</h3>
-    <p> Grêmio Novorizontino joga no estádio Jorge Ismael de Biasi, localizado em Novo Horizonte, São Paulo, Brasil. Com capacidade de 12.398 torcedores.</p>
+    <p> Grêmio Novorizontino joga no estádio Jorge Ismael de Biasi, localizado em Novo Horizonte, São Paulo, Brasil. Com capacidade para 12.398 torcedores.</p>
 
     <h3>Cores</h3>
     <p>As cores do brasão do Novorizontino são amarelo e preto. Essas cores também são as cores oficiais do clube e foram inspiradas nas cores da fábrica onde o time foi originalmente criado, segundo o Grêmio Novorizontino. </p>
