--- a/paginas/remo.html
+++ b/paginas/remo.html
@@ -39,7 +39,7 @@
     <p>O Clube do Remo, também conhecido simplesmente como Remo, é um clube esportivo brasileiro fundado em 5 de fevereiro de 1905, em Belém do Pará. Inicialmente chamado Grupo do Remo, foi formado por dissidentes do Sport Club do Pará e, após um período de interrupção, foi reorganizado em 1911, adotando seu nome atual em 1914. O clube tem suas raízes na paixão pelo remo, esporte que era muito popular na época, e sua sede náutica na Baía do Guajará é um local histórico para o clube.</p>
       
     <h3>Estádio</h3>
-    <p>O Clube do Remo joga no estádio Banpará Baenão, localizado em Belém, Pará, Brasil. Com capacidade de 13.792 torcedores.</p>
+    <p>O Clube do Remo joga no estádio Banpará Baenão, localizado em Belém, Pará, Brasil. Com capacidade para 13.792 torcedores.</p>
 
     <h3>Cores</h3>
     <p>As cores oficiais do brasão do Clube do Remo são azul-marinho e branco.</p>
