--- a/paginas/vilanova.html
+++ b/paginas/vilanova.html
@@ -39,7 +39,7 @@
     <p>“A fundação oficial do clube veio no ano de 1943, quando pelas mãos do coronel Francisco Ferraz Lima, com a água benta do Pe. Giuseppe Balestiere e a benção de Gercina Borges, mulher de Pedro Ludovico Teixeira, conhecida como a "mãe dos pobres", nasce o clube que, em breve, seria o mais popular do Centro-Oeste.</p>
 
     <h3>Estádio</h3>
-    <p>O Vila Nova Futebol Clube joga no Estádio Onésio Brasileiro Alvarenga, localizado em Goiânia, Goiás, Brasil. Com capacidade de 11.788 torcedores.</p>
+    <p>O Vila Nova Futebol Clube joga no Estádio Onésio Brasileiro Alvarenga, localizado em Goiânia, Goiás, Brasil. Com capacidade para 11.788 torcedores.</p>
 
     <h3>Cores</h3>
     <p>O Vila Nova, time de futebol goiano, tem como cores tradicionais o vermelho e o branco.</p>
