--- a/paginas/athletico-pr.html
+++ b/paginas/athletico-pr.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Clube de Regatas Brasil</title>
+  <title>Club Athletico Paranaense</title>
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Clube de Regatas Brasil</h1>
+    <h1>Club Athletico Paranaense</h1>
     <nav>
       <ul>
            <li><a href="index.html">Início</a></li>
@@ -34,15 +34,15 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/crb.png" alt="Escudo do Clube de Regatas Brasil" class="brasao" />
-    <h2>História do Clube de Regatas Brasil</h2>
-    <p>O Clube de Regatas Brasil (CRB) foi fundado em 20 de setembro de 1912, em Maceió, Alagoas, por um grupo de jovens. Inicialmente, o clube se dedicava às regatas, mas também desenvolveu uma forte tradição no voleibol. O CRB é conhecido por sua rivalidade com o CSA, em um clássico chamado "Clássico das Multidões".</p>
+    <img src="../imagens/.png" alt="Escudo do Club Athletico Paranaense" class="brasao" />
+    <h2>História do Club Athletico Paranaense</h2>
+    <p>Foi fundado em 26 de março de 1924, a partir da fusão do International Foot-Ball Club e do América Futebol Clube. O Athletico é bicampeão da Conmebol Sul-Americana, conquistando os títulos em 2018 e 2021, sendo o único clube do estado a conquistar um campeonato internacional.</p>
 
     <h3>Estádio</h3>
-    <p>Estádio Rei Pelé, popularmente conhecido como "Trapichão", é um estádio de futebol, localizado no bairro do Trapiche da Barra, na cidade de Maceió, capital do estado de Alagoas, Brasil. Atualmente o estádio tem capacidade para 20.800 torcedores.</p>
+    <p>O Clube Athletico Paranaense joga na Arena da Baixada, localizada Curitiba, Paraná, Brasil. Com capacidade estimada em mais de 28 mil lugares.</p>
 
     <h3>Cores</h3>
-    <p>O CRB (Clube de Regatas Brasil) tem como cores oficiais o branco e vermelho, e seu brasão é um distintivo com as iniciais "CRB" em branco sobre fundo vermelho.</p>
+    <p>As cores do brasão do Athletico Paranaense são vermelho e preto.</p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
