--- a/paginas/athletico-pr.html
+++ b/paginas/athletico-pr.html
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/.png" alt="Escudo do Club Athletico Paranaense" class="brasao" />
+    <img src="../imagens/athletico-pr.png" alt="Escudo do Club Athletico Paranaense" class="brasao" />
     <h2>História do Club Athletico Paranaense</h2>
     <p>Foi fundado em 26 de março de 1924, a partir da fusão do International Foot-Ball Club e do América Futebol Clube. O Athletico é bicampeão da Conmebol Sul-Americana, conquistando os títulos em 2018 e 2021, sendo o único clube do estado a conquistar um campeonato internacional.</p>
 
