--- a/paginas/athletico-club.html
+++ b/paginas/athletico-club.html
@@ -1,1 +1,53 @@
 
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Athletic Club</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Athletic Club</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="ateletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/athletic-club.png" alt="Escudo do Athletic Club" class="brasao" />
+    <h2>História do Athletic Club</h2>
+    <p>O Avaí Futebol Clube, conhecido como Leão da Ilha, é um clube esportivo brasileiro com sede em Florianópolis, Santa Catarina. Fundado em 1923, o Avaí tem uma história rica no futebol catarinense e nacional. O nome "Avaí" tem origem na Batalha de Avahy, um episódio da Guerra do Paraguai.</p>
+
+    <h3>Estádio</h3>
+    <p>O Avaí Futebol Clube joga no Estádio Aderbal Ramos da Silva, localizado em Florianópolis, Santa Catarina, Brasil. Com capacidade para 17.800 torcedores.</p>
+
+    <h3>Cores</h3>
+    <p>O Avaí tem como cores o azul e o branco.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
