--- a/paginas/athletico-club.html
+++ b/paginas/athletico-club.html
@@ -38,13 +38,13 @@
   <main>
     <img src="../imagens/athletic-club.png" alt="Escudo do Athletic Club" class="brasao" />
     <h2>História do Athletic Club</h2>
-    <p>O Avaí Futebol Clube, conhecido como Leão da Ilha, é um clube esportivo brasileiro com sede em Florianópolis, Santa Catarina. Fundado em 1923, o Avaí tem uma história rica no futebol catarinense e nacional. O nome "Avaí" tem origem na Batalha de Avahy, um episódio da Guerra do Paraguai.</p>
+    <p>O Athletic Club, também conhecido como Athletic Club de São João del Rei, tem uma história marcada por sua fundação e ascensão no futebol brasileiro. Inicialmente chamado Athletic Foot-Ball Club, foi um dos pioneiros no futebol da região, surgindo antes de muitas equipes tradicionais. Em 10 de agosto de 1913, adotou oficialmente o nome Athletic Club, consolidando sua identidade.</p>
 
     <h3>Estádio</h3>
-    <p>O Avaí Futebol Clube joga no Estádio Aderbal Ramos da Silva, localizado em Florianópolis, Santa Catarina, Brasil. Com capacidade para 17.800 torcedores.</p>
+    <p>O Athletic Club, time de São João del Rei (MG), joga em casa no Estádio Joaquim Portugal, também conhecido como Arena Sicredi. Com capacidade de 6.000 torcedores.</p>
 
     <h3>Cores</h3>
-    <p>O Avaí tem como cores o azul e o branco.</p>
+    <p>O brasão do Athletic Club, um clube brasileiro com sede em São João del Rei, Minas Gerais, possui as cores vermelho e branco.</p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
