--- a/paginas/operario-pr.html
+++ b/paginas/operario-pr.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Club Athletico Paranaense</title>
+  <title>Operário Ferroviário Esporte Clube</title>
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Club Athletico Paranaense</h1>
+    <h1>Operário Ferroviário Esporte Clube</h1>
     <nav>
       <ul>
            <li><a href="index.html">Início</a></li>
@@ -34,15 +34,15 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/operario-pr.png" alt="Escudo do Club Athletico Paranaense" class="brasao" />
-    <h2>História do Club Athletico Paranaense</h2>
-    <p>Foi fundado em 26 de março de 1924, a partir da fusão do International Foot-Ball Club e do América Futebol Clube. O Athletico é bicampeão da Conmebol Sul-Americana, conquistando os títulos em 2018 e 2021, sendo o único clube do estado a conquistar um campeonato internacional.</p>
+    <img src="../imagens/operario-pr.png" alt="Escudo do Operário Ferroviário Esporte Clube" class="brasao" />
+    <h2>História do Operário Ferroviário Esporte Clube</h2>
+    <p>O Operário Ferroviário Esporte Clube, também conhecido como Operário-PR ou "Fantasma", é um clube de futebol brasileiro da cidade de Ponta Grossa, no Paraná. Foi fundado em 1º de maio de 1912 e completa 113 anos de história em 2025. O clube é conhecido por sua tradição e apelido de "Fantasma da Vila", sendo um dos clubes mais antigos e com mais história no futebol paranaense. O Operário-PR conquistou o Campeonato Paranaense em 2015 e, recentemente, em 2025, sagrando-se bicampeão estadual.</p>
 
     <h3>Estádio</h3>
-    <p>O Clube Athletico Paranaense joga na Arena da Baixada, localizada Curitiba, Paraná, Brasil. Com capacidade estimada em mais de 28 mil lugares.</p>
-
+    <p>O Operário Ferroviário Esporte Clube joga no Estádio Germano Krüger, localizado em Ponta Grossa, Paraná, Brasil. Com capacidade de 10.632 torcedores.</p>
+    
     <h3>Cores</h3>
-    <p>As cores do brasão do Athletico Paranaense são vermelho e preto.</p>
+    <p>O brasão do Operário Ferroviário Esporte Clube, também conhecido como Fantasma, é predominantemente preto e branco, com listras verticais na camisa.</p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
