--- a/paginas/atletico-go.html
+++ b/paginas/atletico-go.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Avaí Futebol Clube</title>
+  <title>Atlético Clube Goianiense</title>
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Avaí Futebol Clube</h1>
+    <h1>Atlético Clube Goianiense</h1>
     <nav>
       <ul>
            <li><a href="index.html">Início</a></li>
@@ -34,15 +34,15 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/atletico-go.png" alt="Escudo do Avaí Futebol Clube" class="brasao" />
-    <h2>História do Avaí Futebol Clube</h2>
-    <p>O Avaí Futebol Clube, conhecido como Leão da Ilha, é um clube esportivo brasileiro com sede em Florianópolis, Santa Catarina. Fundado em 1923, o Avaí tem uma história rica no futebol catarinense e nacional. O nome "Avaí" tem origem na Batalha de Avahy, um episódio da Guerra do Paraguai.</p>
+    <img src="../imagens/atletico-go.png" alt="Escudo do Atlético Clube Goianiense" class="brasao" />
+    <h2>História do Atlético Clube Goianiense</h2>
+    <p>O Atlético Clube Goianiense, conhecido como Atlético-GO, é um clube de futebol brasileiro fundado em 2 de abril de 1937, em Goiânia, Goiás. É um dos clubes mais antigos e tradicionais do estado, sendo o terceiro mais antigo e o primeiro campeão estadual, segundo o site Wikipédia. O Atlético-GO é conhecido como o "Dragão" e tem uma história marcada por conquistas estaduais e participações em competições nacionais. </p>
 
     <h3>Estádio</h3>
-    <p>O Avaí Futebol Clube joga no Estádio Aderbal Ramos da Silva, localizado em Florianópolis, Santa Catarina, Brasil. Com capacidade para 17.800 torcedores.</p>
-
+    <p>O Atléticp Clube Goianiense joga no Estádio Antônio Accioly, localizado em Goiânia, Goiás, Brasil. Com capacidade de 12.089 torcedores.</p>
+    
     <h3>Cores</h3>
-    <p>O Avaí tem como cores o azul e o branco.</p>
+    <p>As cores do brasão do Atlético Goianiense são vermelho e preto.</p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
