--- a/paginas/cuiaba.html
+++ b/paginas/cuiaba.html
@@ -25,7 +25,7 @@
            <li><a href="athletico-pr.html">Athletico-PR</a></li>
            <li><a href="athletico-club.html">Athletic Club</a></li>
            <li><a href="operario-pr.html">Operário-PR</a></li>
-           <li><a href="ateletico-go.html">Atlético-GO</a></li>
+           <li><a href="atletico-go.html">Atlético-GO</a></li>
            <li><a href="volta-redonda.html">Volta Redonda</a></li>
            <li><a href="paysandu.html">Paysandu</a></li>
            <li><a href="ferroviaria.html">Ferroviária</a></li>
