--- a/paginas/volta-redonda.html
+++ b/paginas/volta-redonda.html
@@ -1,1 +1,53 @@
 
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Athletic Club</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Athletic Club</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="atletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/voltaredonda.png" alt="Escudo do Athletic Club" class="brasao" />
+    <h2>História do Athletic Club</h2>
+    <p>O Athletic Club, também conhecido como Athletic Club de São João del Rei, tem uma história marcada por sua fundação e ascensão no futebol brasileiro. Inicialmente chamado Athletic Foot-Ball Club, foi um dos pioneiros no futebol da região, surgindo antes de muitas equipes tradicionais. Em 10 de agosto de 1913, adotou oficialmente o nome Athletic Club, consolidando sua identidade.</p>
+
+    <h3>Estádio</h3>
+    <p>O Athletic Club, time de São João del Rei (MG), joga em casa no Estádio Joaquim Portugal, também conhecido como Arena Sicredi. Com capacidade de 6.000 torcedores.</p>
+
+    <h3>Cores</h3>
+    <p>O brasão do Athletic Club, um clube brasileiro com sede em São João del Rei, Minas Gerais, possui as cores vermelho e branco.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
