--- a/paginas/volta-redonda.html
+++ b/paginas/volta-redonda.html
@@ -4,12 +4,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Athletic Club</title>
+  <title>Volta Redonda Futebol Clube</title>
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Athletic Club</h1>
+    <h1>Volta Redonda Futebol Clube</h1>
     <nav>
       <ul>
            <li><a href="index.html">Início</a></li>
@@ -36,15 +36,15 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/voltaredonda.png" alt="Escudo do Athletic Club" class="brasao" />
-    <h2>História do Athletic Club</h2>
-    <p>O Athletic Club, também conhecido como Athletic Club de São João del Rei, tem uma história marcada por sua fundação e ascensão no futebol brasileiro. Inicialmente chamado Athletic Foot-Ball Club, foi um dos pioneiros no futebol da região, surgindo antes de muitas equipes tradicionais. Em 10 de agosto de 1913, adotou oficialmente o nome Athletic Club, consolidando sua identidade.</p>
-
+    <img src="../imagens/voltaredonda.png" alt="Escudo do Volta Redonda Futebol Clube" class="brasao" />
+    <h2>História do Volta Redonda Futebol Clube</h2>
+    <p></p>
+    
     <h3>Estádio</h3>
-    <p>O Athletic Club, time de São João del Rei (MG), joga em casa no Estádio Joaquim Portugal, também conhecido como Arena Sicredi. Com capacidade de 6.000 torcedores.</p>
+    <p></p>
 
     <h3>Cores</h3>
-    <p>O brasão do Athletic Club, um clube brasileiro com sede em São João del Rei, Minas Gerais, possui as cores vermelho e branco.</p>
+    <p></p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
