--- a/paginas/volta-redonda.html
+++ b/paginas/volta-redonda.html
@@ -38,13 +38,13 @@
   <main>
     <img src="../imagens/voltaredonda.png" alt="Escudo do Volta Redonda Futebol Clube" class="brasao" />
     <h2>História do Volta Redonda Futebol Clube</h2>
-    <p></p>
+    <p>O Volta Redonda Futebol Clube, conhecido como Voltaço, foi fundado em 9 de fevereiro de 1976, em Volta Redonda, Rio de Janeiro. O clube surgiu como representante da cidade no novo Campeonato Estadual, após a fusão dos estados. Em sua história, o clube conquistou a Taça Guanabara em 2005, surpreendendo as equipes tradicionais do Rio de Janeiro.</p>
     
     <h3>Estádio</h3>
-    <p></p>
+    <p>O Volta Redonda disputa as suas partidas no Estádio Raulino de Oliveira, municipal, está localizado na cidade de Volta Redonda, no estado do Rio de Janeiro, Brasil. Com capacidade para mais de 20.000 pessoas.</p>
 
     <h3>Cores</h3>
-    <p></p>
+    <p>O Volta Redonda Futebol Clube utiliza as cores preto, amarelo e branco em seu escudo e uniforme, que também são as cores da cidade de Volta Redonda. </p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
