--- a/paginas/paysandu.html
+++ b/paginas/paysandu.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Paysandu Sport Club</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Paysandu Sport Club</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="atletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/paysandu.png" alt="Escudo do Paysandu Sport Club" class="brasao" />
+    <h2>História do Paysandu Sport Club</h2>
+    <p>O Paysandu Sport Club foi fundado no dia 2 de fevereiro de 1914, em Belém do Pará, com a missão de ser um clube esportivo, onde a paixão pelo futebol seria uma das principais forças motivadoras. O nome “Paysandu” foi inspirado no navio que trouxe a primeira remessa de imigrantes para o Brasil, símbolo da chegada de uma nova era para o futebol paraense.</p>
 
+    <h3>Estádio</h3>
+    <p>O Paysandu Sport Club joga no Estádio Leônidas Sodré de Castro - Banpará Curuzu, localizado em Belém, no Pará, Brasil. Com tem capacidade de 16.200 torcedores.</p>
+
+    <h3>Cores</h3>
+    <p>As cores do Paysandu Sport Club são azul-celeste ou royal e branco, com listras verticais no uniforme.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
